[gd_scene load_steps=8 format=3 uid="uid://d4niemwvargha"]

[ext_resource type="Theme" uid="uid://dtljlfpi5hkeh" path="res://art/themes/styles/main_menu.tres" id="1_o370o"]
[ext_resource type="Script" path="res://logic/main_menu/main_menu_tutorial.gd" id="2_2eeja"]
[ext_resource type="Texture2D" uid="uid://d235ugdj62yp4" path="res://art/mainmenu.png" id="3_jmaq4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b4wiy"]

[sub_resource type="SystemFont" id="SystemFont_sq2fo"]
font_names = PackedStringArray("Franklin Gothic")

[sub_resource type="Theme" id="Theme_4jvor"]
Label/font_sizes/font_size = 33
Label/fonts/font = SubResource("SystemFont_sq2fo")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bmfk0"]

[node name="main_menu_tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o370o")
script = ExtResource("2_2eeja")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -440.0
offset_top = -260.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_jmaq4")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 100.0
offset_right = 432.0
offset_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_b4wiy")
text = "GAME"
alignment = 0

[node name="basics" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_b4wiy")
text = "BASICS
"
alignment = 0

[node name="tips" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_b4wiy")
text = "TECHNIQUE & TIPS"
alignment = 0

[node name="controls" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_b4wiy")
text = "CONTROLS & UI"
alignment = 0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 520.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -250.0
horizontal_scroll_mode = 0

[node name="scroll_VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="1" type="VBoxContainer" parent="ScrollContainer/scroll_VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4jvor")

[node name="title_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.858824, 0.537255, 0, 1)
autowrap_mode = 2
uppercase = true

[node name="description_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/1"]
layout_mode = 2
autowrap_mode = 2

[node name="image_rect" type="TextureRect" parent="ScrollContainer/scroll_VBoxContainer/1"]
layout_mode = 2
stretch_mode = 3

[node name="2" type="VBoxContainer" parent="ScrollContainer/scroll_VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4jvor")

[node name="title_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.858824, 0.537255, 0, 1)
autowrap_mode = 2
uppercase = true

[node name="description_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/2"]
layout_mode = 2
autowrap_mode = 2

[node name="image_rect" type="TextureRect" parent="ScrollContainer/scroll_VBoxContainer/2"]
layout_mode = 2
stretch_mode = 3

[node name="3" type="VBoxContainer" parent="ScrollContainer/scroll_VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4jvor")

[node name="title_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.858824, 0.537255, 0, 1)
autowrap_mode = 2
uppercase = true

[node name="description_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/3"]
layout_mode = 2
autowrap_mode = 2

[node name="image_rect" type="TextureRect" parent="ScrollContainer/scroll_VBoxContainer/3"]
layout_mode = 2
stretch_mode = 3

[node name="4" type="VBoxContainer" parent="ScrollContainer/scroll_VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4jvor")

[node name="title_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.858824, 0.537255, 0, 1)
autowrap_mode = 2
uppercase = true

[node name="description_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/4"]
layout_mode = 2
autowrap_mode = 2

[node name="image_rect" type="TextureRect" parent="ScrollContainer/scroll_VBoxContainer/4"]
layout_mode = 2
stretch_mode = 3

[node name="5" type="VBoxContainer" parent="ScrollContainer/scroll_VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4jvor")

[node name="title_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/5"]
layout_mode = 2
theme_override_colors/font_color = Color(0.858824, 0.537255, 0, 1)
autowrap_mode = 2
uppercase = true

[node name="description_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/5"]
layout_mode = 2
autowrap_mode = 2

[node name="image_rect" type="TextureRect" parent="ScrollContainer/scroll_VBoxContainer/5"]
layout_mode = 2
stretch_mode = 3

[node name="6" type="VBoxContainer" parent="ScrollContainer/scroll_VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4jvor")

[node name="title_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/6"]
layout_mode = 2
theme_override_colors/font_color = Color(0.858824, 0.537255, 0, 1)
autowrap_mode = 2
uppercase = true

[node name="description_label" type="Label" parent="ScrollContainer/scroll_VBoxContainer/6"]
layout_mode = 2
autowrap_mode = 2

[node name="image_rect" type="TextureRect" parent="ScrollContainer/scroll_VBoxContainer/6"]
layout_mode = 2
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -157.0
offset_right = 394.0
offset_bottom = -100.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="back" type="Button" parent="MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_bmfk0")
text = "BACK TO MAIN MENU
"
alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/game" to="." method="_on_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/basics" to="." method="_on_basics_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/tips" to="." method="_on_tips_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer2/back" to="." method="_on_back_pressed"]
